[package]
name = "advancedresearch-toy_model_of_physical_seshatic_identity"
version = "0.1.0"
edition = "2024"
keywords = ["advancedresearch", "philosophy", "theorem", "proving", "puzzle-game"]
description = "A simple toy model for physical Seshatic identity that satisfies the holographic principle"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/toy_model_of_physical_seshatic_identity.git"
homepage = "https://github.com/advancedresearch/toy_model_of_physical_seshatic_identity"

[lib]
name = "holomaze"

[dependencies]

[dev-dependencies]
piston = "1.0.0"
piston2d-opengl_graphics = "0.88.0"
piston2d-graphics = "0.45.0"
pistoncore-sdl2_window = "0.70.0"
vecmath = "1.0.0"

